--- a/thesis.tex
+++ b/thesis.tex
@@ -91,11 +91,11 @@
 \begin{epigraph}
 \vskip0pt plus.5fil
 \setsinglespacing
-{\flushright
-
+\begin{flushright}
 "If this is the best of possible worlds, what then are the others?"\\
 \vskip\baselineskip
--Voltaire \textit{Candide}\par}
+-Voltaire \textit{Candide}\par
+\end{flushright}
 
 \vfil
 \begin{center}
@@ -234,32 +234,35 @@ existing state of the art.
 % Optional Introduction
 \begin{dissertationintroduction}
 
-\textit{What should a data center server look like?} 20 years ago a data center operator may have
-argued for the simplicity of homogeneity over optimal performance, reasoning that carefully picked
-hardware at a given price point would yield the best cost-performance tradeoffs and that the
-performance yields of next generation hardware would quickly erase any gains made by specializing
-servers~\todo{cite}. 
-%%
-Since then both Moore's law and Dennard scaling have slowed down dramatically. CPU clock speeds and
-memory density improvements have stagnated leaving operators to fight tooth and claw to enjoy the
-efficiency gains of prior decades. The effect is that new technologies are being introduced to to
-achieve scaling.  CPUs are now monstrously parallel. Custom accelerators are common for specialized
-workloads like video coding and machine learning. Indeed the modern data center is a hodgepodge of
-heterogeneous hardware (GPU's, TPU's, DPU's, SmartNICs and
-FPGA's)~\cite{dsnf,azure-smartnic,tpu,nitro}, and various new memory offerings and tiers like
-NVMe~\cite{decible}.  Today the number of server types in a data center, conservatively, is in the
-dozens.  At the time of writing EC2 has 84 listed instance types~\cite{ec2-offer} for their
-customers to design their services. The trend is clear: in search of efficiency data center and
-server design is increasingly heterogeneous with servers being designed for specific applications
+
+\textit{What should a data center server look like?} Twenty years ago, a data center operator may
+have argued for the simplicity of homogeneity over optimal performance, reasoning that carefully
+picked hardware at a given price point would yield the best cost-performance tradeoffs and that the
+performance gains of next-generation hardware would quickly erase any benefits made by specializing
+servers~\todo{cite}.
+
+Since then, both Moore's law and Dennard scaling have slowed down dramatically. CPU clock speeds and
+memory density improvements have stagnated, leaving operators to fight tooth and claw to enjoy the
+efficiency gains of prior decades. The effect is that new technologies are being introduced to
+achieve scaling. CPUs are now monstrously parallel. Custom accelerators are common for specialized
+workloads like video coding and machine learning. Indeed, the modern data center is a hodgepodge of
+heterogeneous hardware (GPUs, TPUs, DPUs, SmartNICs, and
+FPGAs)~\cite{dsnf,azure-smartnic,tpu,nitro}, and various new memory offerings and tiers like
+NVMe~\cite{decible}. Today, the number of server types in a data center, conservatively, is in the
+dozens. At the time of writing, EC2 has 84 listed instance types~\cite{ec2-offer} for their
+customers to design their services. The trend is clear: in search of efficiency, data center and
+server design is increasingly heterogeneous, with servers being designed for specific applications
 and workloads.
 
 Resource disaggregation is a new architectural paradigm for data center resources aimed at improving
-efficiency and managing increased heterogeneity. In the disaggregated model a server's resources do
-not monolithicly reside in a 1, 2, or 4U server form factor, instead each resource, i.e compute,
-memory, storage is deployed separately to a dedicated machine and interconnected via a fast network.
-Servers are composed dynamically from these resources which enables them to be provisioned for their
-exact purpose~\cite{dis-and-app,infiniswap,blade-server,decible,legoos}. This model enables resource
-pooling and sharing which in turn leads to higher efficiency~\cite{regions,fastswap,dsnf,aifm,supernic,ditto}.
+efficiency and managing increased heterogeneity. In the disaggregated model, a server's resources do
+not monolithically reside in a 1U, 2U, or 4U server form factor. Instead, each resource (i.e.,
+compute, memory, storage) is deployed separately to a dedicated machine and interconnected via a
+fast network. Servers are composed dynamically from these resources, which enables them to be
+provisioned for their exact purpose~\cite{dis-and-app,infiniswap,blade-server,decible,legoos}. This
+model enables resource pooling and sharing, which in turn leads to higher
+efficiency~\cite{regions,fastswap,dsnf,aifm,supernic,ditto}.
+
 
 % DRAM in particular has quickly become a precious resource in the data center. Main memory capacity,
 % while growing has not kept up with CPU core counts. The result is that per-core memory capacity is
@@ -267,63 +270,101 @@ pooling and sharing which in turn leads to higher efficiency~\cite{regions,fasts
 % help alleviate memory pressure from applications, but the composition of these memory tiers, and the
 % software to manage them are still undecided.
 
-DRAM in particular has become a precious resource in data centers and is a focused target for
+DRAM, in particular, has become a precious resource in data centers and is a focused target for
 resource pooling~\cite{micron-memorywall}. The benefits of pooling are clear when examining a simple
-bin packing problem. Consider two servers both provisioned with 4GB of DRAM and three jobs each of
-which requires 2.5GB of memory. In a monolithic design a scheduler can only place one job per
-machine or risk swapping to disk. In a disaggregated model the 4GB of memory could be placed in an
-8GB pool which could be easily subdivided into 3 2.5GB partitions. In the monolithic case the unused
-memory is stranded, while pooling reclaims stranded memory.  More concretely at data center levels
-practitioners have to provision their servers for the sum of peak demand, when resources are pooled
-they can be provisioned for the peak of the sum of demand which can be significantly
-lower~\cite{supernic, dsnf}.
+bin packing problem. Consider two servers, each provisioned with 4GB of DRAM, and three jobs, each
+requiring 2.5GB of memory. In a monolithic design, a scheduler can only place one job per machine or
+risk swapping to disk. In a disaggregated model, the 4GB of memory could be placed in an 8GB pool,
+which could be easily subdivided into three 2.5GB partitions. In the monolithic case, the unused
+memory is stranded, while pooling reclaims stranded memory. More concretely, at data center levels,
+practitioners have to provision their servers for the sum of peak demand; when resources are pooled,
+they can be provisioned for the peak of the sum of demand, which can be significantly
+lower~\cite{ dsnf, supernic}.
 
-Disaggregation is only possible because of new fast networks. Commodity NICs now offer 400Gbps with
-expectations for continued growth, and network devices are increasingly programmable with multiple
-vendors offering programable SmartNICs, DPUs and switches.  These two trends have lead to intra rack
-latencies of 1-2{$\mu$}s and network bandwidths on the same order as memory bandwidths with the
-ability to inspect, cache, and modify packets in flight at line rate.
+Disaggregation, in general, is only possible because of new fast networks. Commodity NICs now offer
+400Gbps with expectations for continued growth to 800Gbps and above~\cite{cx8}. Network and memory
+bandwidths are quickly approaching the same order of magnitude. At the same time, network stacks are
+becoming lighter-weight through kernel bypass and CPU bypass technologies like DPDK~\cite{dpdk} and
+RDMA~\cite{infiniband-spec}, enabling applications to more easily take advantage of the additional
+bandwidth. Network devices themselves are becoming increasingly programmable, with multiple vendors
+offering programmable SmartNICs, DPUs, and switches~\cite{tofino2,bluefield,pensando}. These two
+trends have led to intra-rack latencies of 1-2{$\mu$}s, with the ability to inspect, cache, and
+modify packets in flight at line rate.
 
-Storage has seen widespread disaggregation. The key enabling factor is that storage device access
-latency is far higher than a network round trip. In the case of memory the opposite is true. Memory
-access latency is 20x lower than an RTT effectively making it a separate tier of memory when placed
-across a network.  This performance gap plays out in dramatic fashion when porting data structures
-designed for local memory to far memory systems. Sharing data between multiple remote machines where
-coherence between remote cores is required leads to abysmal performance degradation (300x tail
-latencies in some cases)(Chapter~\ref{chap:swordbox}). Further complicating the design of shared
-data structures is that memory, once in a single fault domain, can fail ripping a hole directly into
-a processes address space~\cite{amanda-hotnets,hydra,legoos}.
 
-At it's core the challenge of sharing in disaggregated memory is serialization. When a data
-structure is shared by multiple accessors some mechanism must be in place to ensure the consistency
-of the data structure. In a monolithic system this is often done with locks, or atomic operations,
-and across machines it's done by either a centralized sequencer or a distributed protocol. As a
-point of comparison consider the differences between serialization an a traditional RPC vs
-disaggregated memory. In an RPC system request arrive on a NIC and are delivered to one or more CPU
-cores for processing~\cite{cuckoo-improvements,pilaf,herd,memc3,memcached}. If all requests are
-routed through a single CPU core than it implicitly serializes operations by enqueueing the RPC
-requests and servicing one at a time. If the RPC service has multiple cores any shared structure can
-be protected via a lock or other synchronization mechanism in the RPC servers local memory. In
-contrast in a disaggregated system no such server side CPU exists. Or if one does, its assumed to be
-low power and not capable of handling significant traffic. In the absence of such a CPU clients must
-enforce serialization amongst themselves.
+Despite fast networks, memory disaggregation has remained elusive while storage, such as spinning
+disks and solid-state drives, has seen widespread disaggregation. The reason for this contrast is
+that storage device access latency is far higher than a network round trip. In the case of memory,
+the opposite is true. Memory access latency is approximately 20 times lower than a network round
+trip (50-100ns), effectively making it a separate tier of memory when placed across a network. While
+there is ongoing research demonstrating the advantages of tracking cache lines over pages for remote
+memory~\cite{kona}, the cost of fully disaggregating all memory is deemed too high. A common
+proposal for disaggregated memory is to have CPUs with a reasonably sized cache (e.g., 4GB) of DRAM
+attached to them, along with software to manage and reduce the cost of remote
+accesses~\cite{legoos}.
 
-In the absence of serialization mechanism close to memory clients must rely on the only mechanism
-available in commodity systems RDMA atomics. RDMA atomics, as will be demonstrated throughout this
-dissertation, are the backbone of all shared disaggregated data structures. They take the form of
-two operations compare-and-swap (CAS), and fetch-and-add (FAA), which execute with the same
-semantics as their local counter parts, but on the memory of a remote machine. While their semantics
-remain the same their performance is dramatically different, as noted before, the cost of executing
-a remote operation is 20x that of local memory. This latency inflates the size of critical sections
-built with remote locks, and leads to stale caches and poor performance for optimistic data
-structures when under contention~\cite{clover,sherman,fusee,race,rolex}. \\
+A large body of literature exists on disaggregated memory systems with a significant local cache.
+Many of these systems intervene in the virtual memory system to decrease the cost of accessing
+remote memory by employing prefetching and eviction strategies aimed at minimizing blocking remote
+accesses~\cite{infiniswap,fastswap,leap,hydra}. Similarly, object-based disaggregated systems
+utilize remotable objects with per-object tracking to mitigate the frequency of remote
+accesses~\cite{aifm,carbink}. Additionally, compiler-based systems leverage static and dynamic
+analysis to identify large, small, and hot objects for cache optimization~\cite{mira,trackfm}. These
+systems primarily focus on analyzing memory access patterns and reducing the number of remote
+accesses with decreasing volumes of local cache. However, they often overlook a critical aspect of
+memory access: sharing. When memory is shared, access patterns alone are insufficient to minimize
+round trips. Some degree of coherence must be maintained between remote caches, which is the primary
+focus of this dissertation.
+
+
+% %%
+% Sharing data between multiple remote machines, where coherence between remote cores is required,
+% leads to abysmal performance degradation (300x tail latencies in some cases)
+% (Chapter~\ref{chap:swordbox}). Further complicating the design of shared data structures is that
+% memory, once in a single fault domain, can fail, ripping a hole directly into a process's address
+% space~\cite{amanda-hotnets,hydra,legoos}.
+
+%%you have to add in a paragraph on current successful disaggregated systems
+
+At its core, the challenge of sharing in disaggregated memory is serialization. When a data
+structure is shared by multiple accessors, some mechanism must ensure the consistency of the data
+structure. In a monolithic system, this is often achieved with locks or atomic operations. Across
+machines, serialization is typically accomplished by either a centralized sequencer or a distributed
+protocol. As a point of comparison, consider the differences between serialization in a traditional
+RPC system and disaggregated memory. In an RPC system, requests arrive on a NIC and are delivered to
+one or more CPU cores for processing~\cite{cuckoo-improvements,pilaf,herd,memc3,memcached}. If all
+requests are routed through a single CPU core, it implicitly serializes operations by enqueueing the
+RPC requests and servicing them one at a time. If the RPC service has multiple cores, any shared
+structure can be protected via a lock or other synchronization mechanism in the RPC server's local
+memory. In contrast, in a disaggregated system, no such server-side CPU exists. Or, if one does, it
+is assumed to be low power and incapable of handling significant traffic. In the absence of such a
+CPU, clients must enforce serialization amongst themselves.
+
+In the absence of a serialization mechanism close to memory, clients must rely on the only mechanism
+available in commodity systems: RDMA atomics. Throughout this dissertation, RDMA atomics will be
+demonstrated as the backbone of all shared disaggregated data structures. They take the form of two
+operations: compare-and-swap (CAS) and fetch-and-add (FAA), which execute with the same semantics as
+their local counterparts but on the memory of a remote machine. While their semantics remain the
+same, their performance is dramatically different. As noted before, the cost of executing a remote
+operation is 20 times that of local memory. This latency inflates the size of critical sections
+built with remote locks and leads to stale caches and poor performance for optimistic data
+structures under contention~\cite{clover,sherman,fusee,race,rolex}.\\
+
 
 
 \begin{center}
 \textit{Data structures can be optimized for disaggregated memory by leveraging network programmability} \\
 \end{center}
 
-
+This thesis statement is the core of the work presented in this dissertation. The challenges listed
+above, while fundamental to the problem domain can be practically alleviated in a variety of ways by
+exploding modern network hardware. For instance \textit{Where should serialization occur?} has no
+well established answer, RDMA atomics are only one mechanism available. Given the landscape of
+programmable hardware in-network techniques for serialization are possible but hardly
+explored~\cite{supernic,clio,mind}. Simultaneously \textit{What data structures should be used?} is
+likewise unanswered -- current disaggregated data structures are custom fit for their tasks and
+require years of development~\cite{clover,fusee,race,sherman,rolex,ditto}. Understanding the
+interplay between data structure and network hardware is the core of this work.
 
 
 This dissertation explores the design of shared data structures in disaggregated memory systems.  I
@@ -842,7 +883,7 @@ use local caches to speculatively compute cuckoo paths.
 \subsection{Locks vs Optimistic Concurrency}
 \label{sec:lock-vs-op}
 
-\emph{Locks}  Sherman B+ Tree~\cite{sherman} is augmented using entirely 1-sided RDMA operations. Sherman improves
+\emph{Locks.} Shermans B+ Tree~\cite{sherman} is augmented using entirely 1-sided RDMA operations. Sherman improves
 performance under contention in two ways. First, it places locks for each node in the B+Tree in a
 special region of NIC memory exposed by ConnectX-5 NICs.  This small chunk of memory exposes the
 same RDMA interface as host memory, but allows locking operations to execute with approximately
@@ -853,9 +894,8 @@ the rack scale.
 
 
 \emph{Optimistic concurrency.}  Clover~\cite{clover}, RACE~\cite{race}, and a successor to RACE
-called FUSEE~\cite{fusee} all use optimistic concurrency.
-
-They each supported remote key-value stores through optimistic use of
+called FUSEE~\cite{fusee} all use optimistic concurrency.  They each supported remote key-value
+stores through optimistic use of
 %remote memory accesses are made via
 1-sided RDMA atomic operations and client-driven resolution protocols. 
 %: reads, writes, and CAS.
