--- a/thesis.tex
+++ b/thesis.tex
@@ -348,9 +348,7 @@ their local counterparts but on the memory of a remote machine. While their sema
 same, their performance is dramatically different. As noted before, the cost of executing a remote
 operation is 20 times that of local memory. This latency inflates the size of critical sections
 built with remote locks and leads to stale caches and poor performance for optimistic data
-structures under contention~\cite{clover,sherman,fusee,race,rolex}.\\
-
-
+structures under contention~\cite{clover,sherman,fusee,race,rolex}.
 
 \begin{center}
 \textit{Data structures can be optimized for disaggregated memory by leveraging network programmability} \\
@@ -358,46 +356,51 @@ structures under contention~\cite{clover,sherman,fusee,race,rolex}.\\
 
 This thesis statement is the core of the work presented in this dissertation. The challenges listed
 above, while fundamental to the problem domain can be practically alleviated in a variety of ways by
-exploding modern network hardware. For instance \textit{Where should serialization occur?} has no
-well established answer, RDMA atomics are only one mechanism available. Given the landscape of
-programmable hardware in-network techniques for serialization are possible but hardly
-explored~\cite{supernic,clio,mind}. Simultaneously \textit{What data structures should be used?} is
-likewise unanswered -- current disaggregated data structures are custom fit for their tasks and
-require years of development~\cite{clover,fusee,race,sherman,rolex,ditto}. Understanding the
-interplay between data structure and network hardware is the core of this work.
-
-
-This dissertation explores the design of shared data structures in disaggregated memory systems.  I
-present two systems ({\sword} and RCuckoo) which focus on the challenges of sharing and contending
-access to remote memory. {\sword} (Chapter~\ref{chap:swordbox}) is a middlebox approach for removing
-contention from shared data structures. The high level insight behind {\sword} is to leverage the
-fact that at rack-scale TORs have a serialized view of traffic to and from servers. Using this idea
-{\sword} caches data structure state on a programmable switch. 
+exploding modern network hardware. We provide evidence for the thesis statement above by addressing
+the following two questions.
 %%
-Second I present RCuckoo (Chapter~\ref{chap:rcuckoo}) a fully disaggregated key-value store. RCuckoo
-is specially designed to improve key-value locality. Using locality sensitive hashing RCuckoo
-improves reads, writes, locking and fault recovery performance by reducing the overall number of
-round trips required for each operation.
+\textit{Where and how should serialization occur?} The RDMA answer to these questions is "on the
+NIC" and "with RDMA atomic verbs." However, given the landscape of programmable in-network hardware,
+our options are flexible. At rack-scale, both TORs and NICs offer serialization points. The
+interface and mechanism for serialization can be customized using programmable hardware. For
+instance, a switch could be programmed to maintain locks~\cite{netlock}, provide
+sequencing~\cite{when-computer}, or directly implement contended functions~\cite{mind}.
+Simultaneously, NICs, though lower bandwidth and less centralized than TORs, have the potential to
+offer extended RDMA interfaces~\cite{prism} and implement OS functionality for remote
+clients~\cite{clio, supernic}.
 %%
-{\sword} yields orders of magnitude improvements in both
-throughput (up to 30x) and tail latency (up to 300x).  RCuckoo meets or exceeds the performance of
-all state-of-the art disaggregated key-value stores on small key-value pairs and significantly
-outperforms other systems on read-mostly workloads.
+\textit{What data structures should be used?} Few data structures are currently designed for remote
+memory~\cite{clover,fusee,race,sherman,rolex,ditto}. While these systems resemble
+RDMA~\cite{pilaf,herd,cell} and NUMA~\cite{flat,hopscotch,bbn} systems of the past, disaggregation
+requires special consideration for the network hardware it runs on. How can round trips and access
+latencies be reduced? What data structures are easy to build, and which are hard? These questions
+are a key focus of this dissertation.
+
+This dissertation explores the design of shared data structures in disaggregated memory systems. I
+introduce two systems, Sword and RCuckoo, which address the challenges of sharing and contending
+access to remote memory. Sword (Chapter~\ref{chap:swordbox}) adopts a middlebox approach to alleviate
+contention in shared data structures. Its key insight leverages the serialized view of traffic at
+rack-scale TORs, caching data structure state on a programmable switch. Additionally, I present
+RCuckoo (Chapter~\ref{chap:rcuckoo}), a fully disaggregated key-value store specifically designed to
+enhance key-value locality. RCuckoo utilizes locality-sensitive hashing to improve performance in
+reads, writes, locking, and fault recovery by minimizing round trips. Sword demonstrates significant
+improvements in both throughput (up to 30x) and tail latency (up to 300x), while RCuckoo meets or
+surpasses the performance of all state-of-the-art disaggregated key-value stores on small key-value
+pairs and outperforms other systems on read-mostly workloads.
 
 \end{dissertationintroduction}
 
 \chapter{Background}
 
-Calls for distributed memory systems have been made for decades~\todo{define distributed memory
-systems earlier}, and the groundwork of disaggregation relies heavily on the work of the
-past~\cite{treadmarks,gms}. However, disaggregation differs from prior distributed systems due to
-its scale and system assumptions. 
-%%
-Disaggregation assumes that each resource be stand alone, or paired with a miniscule amount of other
-resources. For instance a storage server may have a small amount of compute such as an ARM core or
-two in order to boot, configure and occasionally execute management tasks. Similarly compute servers
-(CPU, GPU) are outfit with a small amount of memory (e.g 4GB~\cite{legoos}) for caching.
-This assumption transforms the technologies and requirements for disaggregated systems.
+Calls for distributed memory systems have been made for decades~\todo{Define distributed memory
+systems earlier}, and the groundwork of disaggregation relies heavily on past
+work~\cite{treadmarks,gms}. However, disaggregation differs from prior distributed systems due to
+its scale and system assumptions. Disaggregation assumes that each resource is standalone or paired
+with a minimal amount of other resources. For instance, a storage server may have a small amount of
+compute, such as an ARM core or two, in order to boot, configure, and occasionally execute
+management tasks. Similarly, compute servers (CPU, GPU) are outfitted with a small amount of memory
+(e.g., 4GB~\cite{legoos}) for caching. This assumption transforms the technologies and requirements
+for disaggregated systems.
 
 \todo{add forward pointers to the rest of the background and expand this section and explain the
 purpose of this chapter.}
@@ -406,75 +409,74 @@ purpose of this chapter.}
 
 \section{Disaggregation}
 
-As with many paradigm shifts within the systems community the idea of disaggregation is born from
-shifting hardware trends. Per-core access to memory have been decreasing for decades. CPU core
-counts have consistently increased for over a decade while memory speeds and capacity have improved
+As with many paradigm shifts within the systems community, the idea of disaggregation is born from
+shifting hardware trends. Per-core access to memory has been decreasing for decades. CPU core counts
+have consistently increased for over a decade, while memory speeds and capacity have improved
 comparatively slowly~\cite{micron-memorywall}. The result is that CPU cores have less access to
-memory bandwidth and capacity now than 10 years ago. Memory is an increasingly scarce resource and
-data center operators are exploring new ways to achieve better memory utilization.  Disaggregation
-is one such option. Monolithic servers have a fixed amount of RAM per machine which, at a data
-center level, leads to a skewed distributed of memory utilization.  Some servers are starving for
-memory while others have gigabytes to spare. This spare (stranded) memory is one target of
-disaggregation, it aims to give each server access to a shared pool of RAM.  In general a
-disaggregated resource, be it memory, FPGA's, or the network itself, can be provisioned for the
-peak-of-sums, rather than monolithic resources which are provisioned for the
-sum-of-peaks~\cite{clio,supernic,dsnf}.
+memory bandwidth and capacity now than 10 years ago. Memory is an increasingly scarce resource, and
+data center operators are exploring new ways to achieve better memory utilization. Disaggregation is
+one such option. Monolithic servers have a fixed amount of RAM per machine which, at a data center
+level, leads to a skewed distribution of memory utilization. Some servers are starving for memory
+while others have gigabytes to spare. This spare (stranded) memory is one target of disaggregation;
+it aims to give each server access to a shared pool of RAM. In general, a disaggregated resource, be
+it memory, FPGAs, or the network itself, can be provisioned for the peak-of-sums, rather than
+monolithic resources which are provisioned for the sum-of-peaks~\cite{clio,supernic,dsnf}.
 
 The biggest barrier to disaggregation is network latency~\cite{requirements}, and more aptly the
 difficulty of disaggregating a resource is proportional to its access latency with respect to the
 additional latency of the network. Disaggregated storage is a foregone conclusion. Academia and
-industry have pooled SSD's and HDD's into shared storage pools for their increased capacity and
-lower cost. This is relatively easy in comparison to memory as the access cost of storage is already
-high relative to the network. In concrete terms intra-rack RDMA ping latencies are on the order of
-1-2 us. HDD latencies are 10-20ms and SSD are often 100's of us. In these cases the network overhead
-is a single digit percentage or less~\cite{decible}. In contrast DRAM latencies are 50-100ns. DRAM
-over RDMA has a nearly 20x overhead compared to local access. Despite this overhead RDMA is one of
-the strongest contenders for a disaggregated transport.  CXL is a burgeoning technology which
-promises NUMA-like latencies (200-300ns) for remote memory access~\cite{cxl}. At the time of writing
-CXL is not widely available and its performance and scalability are not well
-understood~\cite{direct-cxl,pond,cxl-demyst}. Regardless of interconnect
-the principle of access latency remains the same. This dissertation focuses on RDMA although we see
-the algorithms and data structures presented here to be largely interconnect independent.
+industry have pooled SSDs and HDDs into shared storage pools for their increased capacity and lower
+cost. This is relatively easy in comparison to memory as the access cost of storage is already high
+relative to the network. In concrete terms, intra-rack RDMA ping latencies are on the order of 1-2
+us. HDD latencies are 10-20 ms and SSDs are often 100's of us. In these cases, the network overhead
+is a single-digit percentage or less~\cite{decible}. In contrast, DRAM latencies are 50-100 ns. DRAM
+over RDMA has a nearly 20x overhead compared to local access. Despite this overhead, RDMA is one of
+the strongest contenders for a disaggregated transport. CXL is a burgeoning technology which
+promises NUMA-like latencies (200-300 ns) for remote memory access~\cite{cxl}. At the time of
+writing, CXL is not widely available and its performance and scalability are not well
+understood~\cite{direct-cxl,pond,cxl-demyst}. Regardless of interconnect, the principle of access
+latency remains the same. This dissertation focuses on RDMA although we see the algorithms and data
+structures presented here to be largely interconnect independent.
+
 
 
 \section{RDMA}
 
-Remote direct memory access (RDMA) is the key enabling technology for disaggregation. This section
-describes RDMA's characteristics with respect to how it enables disaggregated architectures via its
-one-sided verbs, as well as the complexities of building shared data structures on top of RDMA with
-respect to serialization.
+Remote Direct Memory Access (RDMA) is the key enabling technology for disaggregation. This section
+describes RDMA's characteristics in terms of how it facilitates disaggregated architectures through
+its one-sided verbs, as well as the complexities of constructing shared data structures on top of
+RDMA, particularly with regard to serialization.
 
-RDMA is a low latency, high bandwidth network protocol. It achieves high performance by bypassing
-multiple overheads common to a traditional networking stack (e.g.  Linux Sockets). 
-%%
-Firstly RDMA is a kernel-bypass technology. It allows userspace applications to directly interact
-with the network interface card (NIC) taking advantage of NIC specific features like on-nic
-caches~\cite{sherman} and avoiding context switch overheads.
-%%
-Second, RDMA's most distinguishing feature is that it offloads much of the network stack to the NIC
-hardware and bypasses the CPU entirely for data transfer. CPU bypass on the receiver side is what
-makes RDMA the key enabling technology for disaggregation. A receiver can expose it's resources like
-memory without requiring a CPU to manage the transfer.
+RDMA is a low-latency, high-bandwidth network protocol. It achieves high performance by bypassing
+multiple overheads common to a traditional networking stack (e.g., Linux Sockets). Firstly, RDMA is
+a kernel-bypass technology, allowing user-space applications to directly interact with the network
+interface card (NIC), taking advantage of NIC-specific features like on-NIC caches~\cite{sherman}
+and avoiding context switch overheads. Secondly, RDMA's most distinguishing feature is that it
+offloads much of the network stack to the NIC hardware and bypasses the CPU entirely for data
+transfer. CPU bypass on the receiver side is what makes RDMA the key enabling technology for
+disaggregation. A receiver can expose its resources like memory without requiring a CPU to manage
+the transfer.
 
 The following example illustrates the difference between sending and receiving with a traditional
-Unix API vs the sequence of operations with RDMA. In a traditional networking stack if a process
-sends a UDP message on an existing socket the user first marshals the data and then submits it to
+Unix API vs the sequence of operations with RDMA. In a traditional networking stack, if a process
+sends a UDP message on an existing socket, the user first marshals the data and then submits it to
 the kernel via a \textit{send}. The kernel then copies the data out of user-space, sets up the
-packet header, and submits the packet to the NIC. 
+packet header, and submits the packet to the NIC.
 %%
-In contrast with RDMA the user-space application registers a region of memory with the NIC prior to
-sending data. If an application wants to transfer the data in that region to a remote machine it
-passes a pointer to the data, and the data's size to the NIC along with the remote machines's
-address, and the action the NIC should take (verbs). The application sends by calling a special
-\textit{rdma send}. This operation is non-blocking and sends a signal to the NIC which then DMAs the
-memory out of the processes address space, constructs a packet on the NIC (including managing
-transport state) and sends directly to another machine. The receiving NIC (in the case of a write)
-issues the DMA to the remote machine's memory without ever interacting with its CPU.  
+In contrast with RDMA, the user-space application registers a region of memory with the NIC prior to
+sending data. If an application wants to transfer the data in that region to a remote machine, it
+passes a pointer to the data and the data's size to the NIC, along with the remote machine's address
+and the action the NIC should take (verbs). The application sends by calling a special \textit{rdma
+send}. This operation is non-blocking and sends a signal to the NIC, which then DMAs the memory out
+of the process's address space, constructs a packet on the NIC (including managing transport state),
+and sends directly to another machine. The receiving NIC (in the case of a write) issues the DMA to
+the remote machine's memory without ever interacting with its CPU.
 %%
-The example above is only a high-level illustration of CPU bypass for RDMA write.  the RDMA protocol
-is deeply complex with a variety of different connection types and verbs. The current infiniband
-RDMA specification is over 1,700 pages~\cite{infiniband-spec}. In this section I briefly cover the
+The example above is only a high-level illustration of CPU bypass for RDMA write. The RDMA protocol
+is deeply complex with a variety of different connection types and verbs. The current InfiniBand
+RDMA specification is over 1,700 pages~\cite{infiniband-spec}. In this section, I briefly cover the
 most important aspects of RDMA for the purposes of this dissertation.
+
 
 
 \subsection{RDMA Connections}
